--- a/gfw-5.css
+++ b/gfw-5.css
@@ -51,7 +51,7 @@
 	.footer-widgets-2,
 	.footer-widgets-3,
 	.footer-widgets-4,
-	.footer-widgets-5
+	.footer-widgets-5 {
 		width: 100%;
 		text-align: left;
 	}
